<resources>
    <string name="app_name">ProyectoIntegrador</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Gustavo Rivarola</string>
    <string name="nav_header_subtitle">gusguz1994@gmail.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Perfil</string>
    <string name="menu_gallery">Propiedades</string>
    <string name="menu_slideshow">Inquilinos</string>
    <string name="menu_tools">Pagos</string>
    <string name="menu_share">Contratos</string>
    <string name="menu_send">Send</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
